@@ -7,6 +7,9 @@
       Sys::Select::Constant
       Sys::Poll::Constant
       Sys::IO::Stat
+  [Exception Changes]
+    * Sys::Process#waitpid method throws an exception if $wstatus_ref is not defined.
+    * Sys::Process#wait method throws an exception if $wstatus_ref is not defined.
     
 0.529001 2025-01-05
   [Changes]
